Fix z-index

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ body {
 }
 
 header {
+  background-color: var(--secondary-accent-color);
   position: relative;
   height: 600px;
   margin-bottom: 20px;
@@ -73,6 +74,7 @@ header {
   height: 400px;
   border-radius: 50%;
   backdrop-filter: blur(10px);
+  z-index: 1;
 }
 
 #main-circle h1,
@@ -299,8 +301,6 @@ em {
 #voronoi {
   position: absolute;
   top: 0;
-  background-color: var(--secondary-accent-color);
-  z-index: -1;
 }
 
 #blur {
@@ -309,9 +309,11 @@ em {
   width: 100%;
   bottom: 0;
   background: linear-gradient(180deg, rgba(251,249,249,0) 0%, rgba(251,249,249,1) 100%);
+  z-index: 1;
 }
 
 #play-pause {
+  z-index: 1;
   font-size: 0.7em;
   position: absolute;
   top: 10px;
